# vulkan-simple-model-loading

./: .gitignore  CMakeLists.txt  README.md  main.cpp
macros_cmake/: glslc.cmake.macro
shaders/: frag.glsl  vert.glsl
stb/: CMakeLists.txt
